--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "syzygy-tables.org",
+  "name": "syzygy-tables.info",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
