--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.swp
 static/js/client.min.js
 static/js/client.min.js.map
+static/css/purified.css
 static/css/style.min.css
 static/css/style.min.css.map
 node_modules
