--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-uglify": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-purifycss": "^0.1.0"
   }
 }
