--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "homepage": "https://syzygy-tables.info",
   "bugs": {
     "url": "https://github.com/niklasf/syzygy-tables.info/issues",
-    "email": "niklas.fiekas@tu-clausthal.de"
+    "email": "niklas.fiekas@backscattering.de"
   },
   "license": "GPL-3.0+",
   "author": {
     "name": "Niklas Fiekas",
-    "email": "niklas.fiekas@tu-clausthal.de"
+    "email": "niklas.fiekas@backscattering.de"
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,8 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-cssmin": "^0.12.3",
-    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-purifycss": "^0.1.0"
   }
