--- a/etc/supervisor/conf.d/syzygy.conf
+++ b/etc/supervisor/conf.d/syzygy.conf
@@ -1,5 +1,5 @@
 [program:syzygy]
-command=bash -c "ulimit -n 4096; source venv/bin/activate; python server.py"
+command=bash -c "ulimit -n 4096; source venv/bin/activate; exec python server.py"
 user=www-data
 autostart=true
 directory=/home/niklas/syzygy-tables.info/
