--- a/config.default.ini
+++ b/config.default.ini
@@ -4,10 +4,4 @@ port=5000
 base_url=http://127.0.0.1:5000/
 name=syzygy-tables.info
 development=yes
-
-[tablebases]
-syzygy=
-    four-men
-    five-men
-gaviota =
-    gaviota
+backend=https://tablebase.lichess.ovh/standard
