--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "grunt": "^1.0.2",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-purifycss": "^0.1.2"
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
