--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
   "dependencies": {
     "chess.js": "^0.10.2",
     "chessground": "^7.3.2",
-    "jquery": "^3.3.1"
+    "zepto-browserify": "^1.1.6-1"
   }
 }
