--- a/etc/systemd/system/syzygy.service
+++ b/etc/systemd/system/syzygy.service
@@ -6,7 +6,7 @@ Requires=network.target
 [Service]
 User=www-data
 WorkingDirectory=/opt/syzygy-tables.info/
-ExecStart=/opt/syzygy-tables.info/venv/bin/python server.py
+ExecStart=/usr/bin/pipenv run server
 Restart=always
 KillSignal=SIGINT
 
