--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "url": "https://github.com/niklasf/syzygy-tables.info.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "browserify": "^16.2.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "chess.js": "^0.10.2",
-    "chessground": "^7.6.1",
+    "chessground": "=7.6.1",
     "zepto-browserify": "^1.1.6-1"
   }
 }
