--- a/package.json
+++ b/package.json
@@ -26,15 +26,14 @@
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
-    "browserify": "^16.5.1",
+    "@rollup/plugin-babel": "^5.0.4",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^8.1.0",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-uglify": "^3.0.2",
-    "gulp-watch": "^5.0.1",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "rollup": "^2.18.1",
+    "rollup-plugin-terser": "^6.1.0"
   },
   "dependencies": {
     "chess.js": "^0.11.0",
