--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "rollup": "^2.26.10",
+    "rollup": "^2.26.11",
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
+    "cash-dom": "^8.0.0",
     "chess.js": "^0.11.0",
-    "chessground": "^7.9.2",
-    "zepto-browserify": "^1.1.6-1"
+    "chessground": "^7.9.2"
+  },
+  "scripts": {
+    "prepare": "gulp"
   }
 }
