--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
+    "eslint": "^7.8.1",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
@@ -40,6 +43,7 @@
     "chessops": "^0.6.0"
   },
   "scripts": {
-    "prepare": "gulp"
+    "prepare": "gulp",
+    "lint": "eslint src/*.ts"
   }
 }
