--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@badrap/result": "^0.2.6",
     "chessground": "^7.9.2",
     "chessops": "^0.6.0"
   },
