--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 aiohttp = "~=3.6.3"
 brotlipy = "~=0.7.0"
 Jinja2 = "~=2.11.2"
-python-chess = "~=1.1.0"
+chess = "~=1.2.2"
 tinyhtml = "~=1.0.0b1"
 
 [pipenv]
