--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,9 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-aiohttp = "~=3.6.3"
-brotlipy = "~=0.7.0"
-chess = "~=1.2.2"
+aiohttp = "~=3.7.3"
+Brotli = "~=1.0.9"
+chess = "~=1.3.0"
 tinyhtml = "~=1.0.0"
 
 [scripts]
