--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "prettier": "^2.2.1",
     "rollup": "^2.38.0",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.1.0",
@@ -45,6 +46,7 @@
   },
   "scripts": {
     "prepare": "gulp",
-    "lint": "eslint src/*.ts"
+    "lint": "eslint src/*.ts",
+    "format": "prettier --write src"
   }
 }
