--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
   "scripts": {
     "prepare": "gulp",
     "lint": "eslint src/*.ts",
-    "format": "prettier --write src"
+    "format": "prettier --write src static/css/cburnett.css static/css/chessground.css static/css/style.css"
   }
 }
