--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-aiohttp = "~=3.7.4"
+aiohttp = "~=3.7.4.post0"
 Brotli = "~=1.0.9"
-chess = "~=1.5.0"
+chess = "~=1.6.1"
 tinyhtml = "~=1.2.0"
 
 [scripts]
 server = "python -m syzygy_tables_info"
 
 [dev-packages]
-mypy = "~=0.812"
+mypy = "~=0.910"
