--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "User interface and public API for probing Syzygy endgame tablebases",
   "keywords": [
-    "Syzygy",
+    "syzygy",
     "chess",
     "endgame",
     "tablebase"
