--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
       - run: pipx install pipenv
       - uses: actions/setup-python@v3
         with:
-          python-version: "3.9"
+          python-version: '3.9'
           cache: pipenv
       - run: pipenv install --dev
       - run: pipenv run check
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "16"
+          node-version: '16'
           cache: npm
       - run: npm ci
+      - run: npm run lint
