--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: pipx install pipenv
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.9' # nevrast.backscattering.de
           cache: pipenv
       - run: pipenv install --dev
       - run: pipenv run check
