--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   },
   "repository": "https://github.com/niklasf/syzygy-tables.info",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^14",
-    "@rollup/plugin-typescript": "^8",
+    "@rollup/plugin-node-resolve": "^15",
+    "@rollup/plugin-terser": "^0.1",
+    "@rollup/plugin-typescript": "^10",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
@@ -30,8 +31,7 @@
     "gulp-clean-css": "^4",
     "gulp-concat": "^2",
     "prettier": "^2",
-    "rollup": "^2",
-    "rollup-plugin-terser": "^7",
+    "rollup": "^3",
     "tslib": "^2",
     "typescript": "^4"
   },
