--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,8 @@ jobs:
           python-version: '3.9' # nevrast.backscattering.de
           cache: pipenv
       - run: pip install pipenv
-      - run: pip install tomli # Workaround for mypy failing in CI
       - run: pipenv install --dev
+      - run: pipenv run pip install tomli # Workaround for mypy failing in CI
       - run: pipenv run check
   client:
     runs-on: ubuntu-latest
