--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,5 @@
 [flake8]
 ignore =
-    E302 # Expected two blank lines, got one
+    # Expected two blank lines, got one
+    E302
 max-line-length = 100
