--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.pyc
 *.swp
-static/js/client.min.js
-static/js/client.min.js.map
+static/js/main.min.js
+static/js/main.min.js.map
 static/css/style.min.css
 static/css/style.min.css.map
 node_modules
