--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '18.12.1' # nevrast.backscattering.de
+          node-version: '20.9.0'
           cache: npm
       - run: npm ci
       - run: npm run lint
