--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,12 +9,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.9' # nevrast.backscattering.de
-          cache: pipenv
-      - run: pip install pipenv
-      - run: pipenv install --dev
-      - run: pipenv run pip install tomli # Workaround for mypy failing in CI
-      - run: pipenv run check
+          python-version: '3.9.2' # nevrast.backscattering.de
+          cache: poetry
+      - run: poetry install
+      - run: poetry run mypy --strict syzygy_tables_info
   client:
     runs-on: ubuntu-latest
     steps:
