--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,21 @@
-[tool.poetry]
+[project]
 name = "syzygy-tables.info"
-package-mode = false
+version = "1.0.0"
 description = "User interface and public API for probing Syzygy endgame tablebases"
-authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
+authors = [
+    { name = "Niklas Fiekas", email = "niklas.fiekas@backscattering.de" }
+]
 readme = "README.md"
+requires-python = ">=3.9.2"
+dependencies = [
+    "aiohttp~=3.12.15",
+    "Brotli~=1.1.0",
+    "cbor2~=5.7.0",
+    "chess~=1.11.2",
+    "tinyhtml~=1.3.0",
+]
 
-[[tool.poetry.packages]]
-include = "syzygy_tables_info"
-
-[tool.poetry.dependencies]
-python = "^3.9.2"
-aiohttp = "^3.11.11"
-Brotli = "^1.1.0"
-cbor2 = "^5.6.5"
-chess = "^1.11.1"
-tinyhtml = "^1.2.0"
-
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.14.0"
+[dependency-groups]
+dev = [
+    "mypy~=1.18.2",
+]
