--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: astral-sh/setup-uv@v6
         with:
-          python-version: '3.12' # nevrast.backscattering.de
+          version-file: .tool-versions
       - run: uv sync
       - run: uv run mypy --strict syzygy_tables_info
   client:
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
         with:
-          node-version: '20.9.0'
+          node-version-file: .tool-versions
           cache: npm
       - run: npm ci
       - run: npm run lint
