add uv version to .tool-versions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           version-file: .tool-versions
       - run: uv sync
+      - run: uv run python --version
       - run: uv run mypy --strict syzygy_tables_info
   client:
     runs-on: ubuntu-latest
