--- a/config.default.ini
+++ b/config.default.ini
@@ -4,4 +4,5 @@ port=5000
 base_url=http://127.0.0.1:5000/
 name=syzygy-tables.info
 development=yes
+tarpit=yes
 backend=https://tablebase.lichess.ovh/standard
